# labs-control

./: .gitignore  README.md  pyproject.toml  top_base.txt
dev/: email_sender.py  labs_table.csv  main.py  scraper.ipynb  scraper.py  scraper_portal.py  settings.py
lisbon_scripts/: github_optimize.ipynb  lab_reminder.ipynb
lisbon_scripts-deprecated/: github_automate.ipynb  lab_reminder.ipynb
lisbon_scripts/excel_files/: DATA PT Feb 22nd _Lab Control.xlsx  Labs.xlsx
notebooks/: 0.1-test-scraping.ipynb  0.2-scraping-each-student-table.ipynb  0.3-add-missing-labs-names.ipynb  0.4-configure-email-pipeline.ipynb  0.5-debug-email-sender-funcs.ipynb  old_scraper.py
secrets/: secrets.md
