
[dep]
dependencies = [
    "pandas",
    "numpy",
    "requests",
    "selenium",
    "beautifulsoup4",
    "pylint",
    "smtplib",
    "ssl",
    ]

[project.optional-dependencies]
dev = [
    "pandas",
    "numpy",
    "requests",
    "selenium",
    "beautifulsoup4",
    "pylint",
    "smtplib",
    "ssl",
    ]

[tool.setuptools]
py-modules = []

[tool.coverage.run]
omit = [
    "*/conftest.py", "*/test*", # omit test files
]

[tool.coverage.report]
fail_under = 80
