[project]
name = "labs-control"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.8"
description = "Lab controller for Ironhack Data PT-RMT students."
authors = [
    {name = "Gonçalo Jardim<goncalodajardim@gmail.com>"},
    {name = "Miguel Simón<miguelsimonmoya@gmail.com>"}
]

dependencies = ["pandas", "numpy", "selenium", "webdriver-manager", "bs4"]

[project.optional-dependencies]
dev = ["pytest", "pylint", "pytest-cov"]

[tool.setuptools]
packages = ["dev"]

[tool.coverage.run]
omit = [
    "*/conftest.py", "*/test*", # omit test files
]

[tool.coverage.report]
fail_under = 80